alert fix and code overflow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -123,11 +123,11 @@ main h4 {
 }
 
 pre {
-  @apply bg-gray-600 text-gray-100 mx-5 rounded mt-3;
+  @apply bg-gray-600 text-gray-100 mx-5 rounded mt-3 overflow-auto;
 }
 
 .alert {
-  @apply mx-1 my-3 px-4 py-3 w-full rounded-md  text-lg bg-blue-200 text-blue-900;
+  @apply my-3 px-4 py-3 w-full rounded-md text-lg bg-blue-200 text-blue-900;
 }
 
 .alert-warning {
